src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>acf_Current_employer_Phone__c</fullName>
        <description>Click Loans</description>
        <label>Current employer Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Driver_Licence__c</fullName>
        <description>Click Loans</description>
        <label>Driver Licence #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Driver_Licence_state__c</fullName>
        <description>Click Loans</description>
        <label>acf_Driver_Licence_state__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_How_Long__c</fullName>
        <description>Click Loans</description>
        <label>How Long</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_How_Long_have_you_been_employed__c</fullName>
        <description>Click Loans</description>
        <label>How Long have you been employed</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_How_much_Debt_Consolidate__c</fullName>
        <description>Click Loans</description>
        <label>How Much (Debt Consolidate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acf_Last_3yrs_empl_History__c</fullName>
        <description>Click Loans</description>
        <label>Last 3 (2?) yrs empl History</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acf_Why_are_you_refinancing_pl__c</fullName>
        <description>Click Loans</description>
        <label>Why are you refinancing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Work_Phone__c</fullName>
        <description>Click Loans</description>
        <label>Work Phone #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Citizenship_Status__c</fullName>
        <description>Click Loans</description>
        <label>Citizenship Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_DOB__c</fullName>
        <description>Click Loans</description>
        <label>DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Employer_Name__c</fullName>
        <description>Click Loans</description>
        <label>Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Marital_Status__c</fullName>
        <description>Click Loans</description>
        <label>Marital Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Monthlly_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Residency_status__c</fullName>
        <description>Click Loans</description>
        <label>Residency status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliate_source__c</fullName>
        <label>affiliate_source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__AdWords_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Campaign</label>
        <referenceTo>bizible__AdWords_Campaign__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Ad_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Group</label>
        <referenceTo>bizible__Ad_Group__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__City__c</fullName>
        <label>Bizible City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Country__c</fullName>
        <label>Bizible Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Device__c</fullName>
        <label>Bizible Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Keyword</label>
        <referenceTo>bizible__Keyword__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__LandingPage__c</fullName>
        <description>Bizible Landing Page</description>
        <label>Bizible Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Medium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Medium</label>
        <referenceTo>bizible__Medium__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__ReferrerPage__c</fullName>
        <description>Bizible Referrer Page</description>
        <label>Bizible Referrer Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Region__c</fullName>
        <label>Bizible Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Search_Phrase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Search Phrase</label>
        <referenceTo>bizible__Search_Phrase__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Text_Ad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Content</label>
        <referenceTo>bizible__Text_Ad__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__WebSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible WebSource</label>
        <referenceTo>bizible__WebSource__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clickApp_1_Monthly_Expenses__c</fullName>
        <label>App 1 Monthly Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickApp_2_Monthly_Expenses__c</fullName>
        <label>App 2 Monthly Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickCurrent_Role_App_2__c</fullName>
        <label>Current Role App 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clickLead_Status__c</fullName>
        <description>Pulls the lead status from lead to account for click opps</description>
        <formula>TEXT(acf_Lead__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_Is_this_loan_for_an_investment_p__c</fullName>
        <label>Is this loan for an investment property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vhc__CallFile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call File</label>
        <referenceTo>vhc__Campaign__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vhc__TimeZone__c</fullName>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC-12:00) International Date Line West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-11:00) Coordinated Universal Time-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-09:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Pacific Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Chihuahua, La Paz, Mazatlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Mountain Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Guadalajara, Mexico City, Monterrey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Bogota, Lima, Quito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Eastern Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Indiana (East)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:30) Caracas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Asuncion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Atlantic Time (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Cuiaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Georgetown, La Paz, Manaus, San Juan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Santiago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Brasilia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Buenos Aires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Cayenne, Fortaleza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Greenland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Montevideo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-02:00) Coordinated Universal Time-02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>